add fields
