# app/microservice/swagger.yml
@@ -8,13 +8,13 @@ host: example.vizzuality.com
 schemes:
   - https
   - http
-# will be prefixed to all paths
-basePath: /api/v1
-
 consumes:
   - application/json
 produces:
   - application/vnd.api+json
+
+# will be prefixed to all paths
+basePath: /api/v1
 
 paths:
   /story/{id}:
@@ -58,6 +58,11 @@ paths:
           in: path
           description: ID of story to fetch
           required: true
+          type: string
+        - name: fields
+          in: query
+          description: Fields to serialize (sepparated by comma) of the story (?fields=name,title)
+          required: false
           type: string
       responses:
         200:
@@ -253,6 +258,12 @@ paths:
         - application/vnd.api+json
       tags:
         - STORY
+      parameters:
+        - name: fields
+          in: query
+          description: Fields to serialize (sepparated by comma) of the story (?fields=name,title)
+          required: false
+          type: string
       operationId: getStories
       responses:
         200:
@@ -311,6 +322,11 @@ paths:
           in: path
           description: ID of user
           required: true
+          type: string
+        - name: fields
+          in: query
+          description: Fields to serialize (sepparated by comma) of the story (?fields=name,title)
+          required: false
           type: string
       responses:
         200:
